--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,27 +1,37 @@
 <% if logged_in? %>
-<div class="side-menu">
-  <ul>
-    <li id="m-search"><%= link_to '', search_url, remote: true, class: 'm-add', 'uk-icon': 'search' %></li>
-    <% current_user.collections.each do |collection| %>
-    <li id="mc-<%= collection.id %>">
-      <%= link_to collection.name, collection, remote: true , class: 'm-coll' %>
-      <span class="opts">
-        <%= link_to '', edit_collection_url(collection), remote: true, class: 'uk-link m-coll-o', 'uk-icon': 'icon: pencil; ratio: 1.25', "uk-toggle": "target: #coll-modal", 'uk-tooltip': "title: Edit; pos: top-left" %>
-        <% tas = "Delete <span class='light-grey'>\"#{ collection.name }\"</span> collection?<span class='add-coll-icon'>#{ svg 'shelf_icon' }</span><p class='del-coll-info blink_me'>All games in this collection will be lost!</p>" %>
-        <%= link_to '', collection, method: :delete, class: 'uk-link m-coll-o', 'uk-icon': 'icon: trash; ratio: 1.25', 'uk-tooltip': "title: Delete; pos: top-left", data: { confirm: tas } %>
-      </span>
-    </li>
-    <% end %>
-    <li><%= link_to '', new_collection_path, id: 'm-add-coll', remote: true, "uk-toggle": "target: #coll-modal", class: 'm-add', 'uk-icon': 'plus' %></li>
-  </ul>
-</div>
-<% end %>
-<div id="coll-modal" class="uk-flex-top" uk-modal>
-  <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
-    <button class="uk-modal-close-default" type="button" uk-close></button>
-    <div class="modal-header">
-      <p class="header"><span id="coll-action">Create</span> custom collection<span class='add-coll-icon'><%= svg 'shelf_icon' %></span></p>
-    </div>
-    <div class="modal-content"></div>
+  <div class="side-menu">
+    <ul>
+      <li id="m-search"><%= link_to '', search_url, remote: true, class: 'm-add', 'uk-icon': 'search' %></li>
+      <% current_user.collections.each do |collection| %>
+      <li id="mc-<%= collection.id %>">
+        <%= link_to collection.name, collection, remote: true , class: 'm-coll' %>
+        <span class="opts">
+          <%= link_to '', edit_collection_url(collection), remote: true, class: 'uk-link m-coll-o', 'uk-icon': 'icon: pencil; ratio: 1.25', "uk-toggle": "target: #coll-modal", 'uk-tooltip': "title: Edit; pos: top-left" %>
+          <% tas = "Delete <span class='light-grey'>\"#{ collection.name }\"</span> collection?<span class='add-coll-icon'>#{ svg 'shelf_icon' }</span><p class='del-coll-info blink_me'>All games in this collection will be lost!</p>" %>
+          <%= link_to '', collection, method: :delete, class: 'uk-link m-coll-o', 'uk-icon': 'icon: trash; ratio: 1.25', 'uk-tooltip': "title: Delete; pos: top-left", data: { confirm: tas } %>
+        </span>
+      </li>
+      <% end %>
+      <li><%= link_to '', new_collection_path, id: 'm-add-coll', remote: true, "uk-toggle": "target: #coll-modal", class: 'm-add', 'uk-icon': 'plus' %></li>
+    </ul>
   </div>
-</div>
+  <div id="coll-modal" class="uk-flex-top" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+      <button class="uk-modal-close-default" type="button" uk-close></button>
+      <div class="modal-header">
+        <p class="header"><span id="coll-action">Create</span> custom collection<span class='add-coll-icon'><%= svg 'shelf_icon' %></span></p>
+      </div>
+      <div class="modal-content"></div>
+    </div>
+  </div>
+<% elsif guest_logged? %>
+  <div class="side-menu">
+    <ul>
+      <% shared_collections.each do |collection| %>
+      <li id="mc-<%= collection.id %>">
+        <%= link_to collection.name, collection, remote: true , class: 'm-coll' %>
+      </li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
