--- a/app/views/charts/_form.js.erb
+++ b/app/views/charts/_form.js.erb
@@ -1,4 +1,4 @@
-$('#f-modal').find('.modal-content').html("<%= j(render partial: 'graph_form') %>");
+$('#f-modal').find('.modal-content').html("<%= j(render partial: 'graph_form', locals: { url: url, user: user }) %>");
 var coll_id = '<%= @coll_id %>';
 var option = $('option[value=' + coll_id +']');
 option.attr("selected", "selected");
