--- a/app/views/charts/_graph_form.html.erb
+++ b/app/views/charts/_graph_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(url: "/graphs", method: "get", id: 'graph-form') do %>
+<%= form_with(url: url, method: "get", id: 'graph-form') do %>
 <div uk-form-custom="target: true">
-  <%= select_tag(:graph_collection, options_for_select(collections_for_graph_form(current_user))) %>
+  <%= select_tag(:graph_collection, options_for_select(colls_graph_form(user))) %>
   <span class="coll-name"></span><%= content_tag :span, svg('big_chart'), class: 'uk-icon' %>
 </div>
 <%= submit_tag('render') %>
