--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, title, id: 'logo' %>
+<%= content_tag :div, title, id: 'logo', class: 'logo' %>
 <% if logged_in? %>
   <%= link_to '', settings_path, id: 'social', class: 'nav-icon', 'uk-icon': 'social' %>
   <%= link_to '', settings_path, id: 'settings', class: 'nav-icon', 'uk-icon': 'settings' %>
