--- a/app/views/layouts/_sh_toolbar.html.erb
+++ b/app/views/layouts/_sh_toolbar.html.erb
@@ -1,8 +1,8 @@
-<%= content_tag :div, id: 'toolbar', class: tb_open? do %>
+<%= content_tag :div, id: 'toolbar', class: "#{tb_open?} guest" do %>
 <%= content_tag :a, nil, id: 'tool-show', class: tb_open?, 'uk-icon': 'chevron-left' %>
 <ul>
   <li>
-    <%= link_to svg('chart'), graph_form_url(collection_id), id: 'chart', class: 'uk-icon', remote: true, 'uk-toggle': 'target: #f-modal' %>
+    <%= link_to svg('chart'), guest_graph_form_url(collection_id), id: 'chart', class: 'uk-icon', remote: true, 'uk-toggle': 'target: #f-modal' %>
   </li>
   <li>
     <%= content_tag :a, svg('dark'), id: 'change-theme', class: "uk-icon #{ current_theme == 'theme_dark' ? 'active' : '' }"  %>
@@ -17,10 +17,6 @@
   <% end %>
   <%= content_tag :li do %>
   <%= content_tag :a, nil, id: 'close-panels', 'uk-icon': 'shrink' %>
-  <% end %>
-  <% edit_change = 'active' if edit_open? %>
-  <%= content_tag :li do %>
-  <%= content_tag :a, nil, id: 'g-show-edit', class: edit_change, 'uk-icon':'cog' %>
   <% end %>
   <hr>
   <li><%= content_tag :a, nil, id: 'tool-hide', 'uk-icon': 'chevron-right' %></li>
