--- a/app/views/my_games/_sh_list.html.erb
+++ b/app/views/my_games/_sh_list.html.erb
@@ -36,17 +36,7 @@
     <% end %>
     <%= link_to('', list_show_url(game.igdb_id, id), class: 't-trigger',
     remote: true, 'uk-toggle': 'target: #t-game-show') %>
-    <%= content_tag :div, game.created_at.to_date, class: "t-added t #{ extra }" + mw_class %>
-    <%= content_tag :div, class: "t-menu t #{ extra }" do %>
-    <% if needs_platform %>
-    <%= link_to('', edit_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-edit-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'pencil', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Edit; pos: top") %>
-    <% else %>
-    <%= content_tag(:a, '', class: 'uk-icon-link cf-disabled', 'uk-icon': 'pencil') %>
-    <% end %>
-    <%= link_to('', cm_form_url(game_id: id, collection_id: collection.id, view: @view), id: "g-copy-#{ id }", class: 'uk-icon-link', remote: true, 'uk-icon': 'copy', 'uk-toggle': 'target: #t-ops', 'uk-tooltip' => "title: Copy / Move; pos: top") %>
-    <%= link_to('', remove_url(game_id: id, collection_id: collection.id, view: @view), id: "g-delete-#{ id }", class: 'uk-icon-link', method: :delete, remote: true, 'uk-icon': 'trash', 'uk-tooltip': 'title: Delete; pos: top') %>
-    <%= content_tag :div,nil, class: "menu-shadow #{ extra }" %>
-    <% end %>
+    <%= content_tag :div, game.created_at.to_date, class: "t-added t" + mw_class %>
     <% end %>
     <% end %>
     <div class="uk-width-1-1 page-links bottom l-mod">
@@ -56,13 +46,6 @@
 <div id="t-game-show" uk-modal ="container: .my-games">
     <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical" uk-overflow-auto>
         <button class="uk-modal-close-default" type="button" uk-close></button>
-        <div class="modal-content">
-            <span class="loading">Loading</span>
-        </div>
-    </div>
-</div>
-<div id="t-ops" uk-modal ="container: .my-games">
-    <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
         <div class="modal-content">
             <span class="loading">Loading</span>
         </div>
