--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -2,37 +2,39 @@
 <% empty = @games.empty? %>
 <% not_active = empty ? 'not-active' : '' %>
 <%= content_tag :div, class: "uk-width-1-1 my-search #{ !needs_platform ? 'left-no-p' : 'left-p' }" do %>
-    <%= search_form_for(@q, url: collection, remote: true) do |f| %>
-    <%= content_tag :div, class: 'uk-inline' do %>
-        <span class="s-icon" uk-icon="icon: search"></span>
-        <%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off", disabled: empty) %>
+<% ransack_url = shared ? show_guest_url : collection %>
+<%= search_form_for(@q, url: ransack_url, remote: true) do |f| %>
+<%= content_tag :div, class: 'uk-inline' do %>
+<span class="s-icon" uk-icon="icon: search"></span>
+<%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off", disabled: empty) %>
+<% end %>
+<%= hidden_field_tag 'view', view %>
+<% if needs_platform %>
+<div class="srch-div first"></div>
+<div uk-form-custom="target: true">
+    <% platforms = shared ? guest_platforms : user_platforms %>
+    <%= f.select(:plat_eq, platforms, {include_blank: 'All Platforms'}, {class: "select-input #{ not_active }", disabled: empty} ) %>
+    <span></span>
+</div>
+<div class="srch-div"></div>
+<div class="radios uk-inline">
+    <%= content_tag :label, class: "container #{ not_active }" do %>
+    All<%= f.radio_button(:physical_eq, nil, checked: true, class: '') %><span class="checkmark"></span>
     <% end %>
-    <%= hidden_field_tag 'view', view %>
-    <% if needs_platform %>
-    <div class="srch-div first"></div>
-    <div uk-form-custom="target: true">
-        <%= f.select(:plat_eq, user_platforms, {include_blank: 'All Platforms'}, {class: "select-input #{ not_active }", disabled: empty} ) %>
-        <span></span>
-    </div>
-    <div class="srch-div"></div>
-    <div class="radios uk-inline">
-        <%= content_tag :label, class: "container #{ not_active }" do %>
-        All<%= f.radio_button(:physical_eq, nil, checked: true, class: '') %><span class="checkmark"></span>
-        <% end %>
-        <%= content_tag :label, class: "container #{ not_active }" do %>
-        Digital<%= f.radio_button(:physical_eq, false, checked: false, class: '') %><span class="checkmark"></span>
-        <% end %>
-        <%= content_tag :label, class: "container #{ not_active }" do %>
-        Physical<%= f.radio_button(:physical_eq, true, checked: false, class: '') %><span class="checkmark"></span>
-        <% end %>
-    </div>
+    <%= content_tag :label, class: "container #{ not_active }" do %>
+    Digital<%= f.radio_button(:physical_eq, false, checked: false, class: '') %><span class="checkmark"></span>
     <% end %>
-    <%= content_tag(:button,'', id: 'search-reset', 'uk-close': '')%>
+    <%= content_tag :label, class: "container #{ not_active }" do %>
+    Physical<%= f.radio_button(:physical_eq, true, checked: false, class: '') %><span class="checkmark"></span>
     <% end %>
+</div>
+<% end %>
+<%= content_tag(:button,'', id: 'search-reset', 'uk-close': '')%>
+<% end %>
 <% end %>
 <div id='r-q'>,,on</div>
 <div id='r-s'></div>
 <div class="my-games">
-    <%= render partial: "my_games/#{ view }", locals: { collection: collection } %>
+    <%= render partial: "my_games/#{ view }", locals: { collection: collection, shared: shared } %>
 </div>
-<%= render partial: 'layouts/toolbar', locals: { collection_id: collection.id, view: view } %>
+<%= render partial: 'layouts/toolbar', locals: { collection_id: collection.id, view: view, shared: shared } %>
