--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -34,7 +34,7 @@ if (no_errors) {
 $(function() {
     activateSearchToolbar(view, search_type);
     changeSearchView();
-    showHideToolbar();
+    showHideToolbar(false);
     clearSearchWait();
-    changeTheme();
+    changeTheme(false);
 });
