--- a/app/views/collections/_search.js.erb
+++ b/app/views/collections/_search.js.erb
@@ -17,7 +17,7 @@ switch (view) {
         listHover();
         break;
     case 'covers':
-        underCover();
+        underCover(<%= shared %>);
         fitNameInNoCover();
         break;
     case 'panels':
