--- a/app/views/collections/_show.js.erb
+++ b/app/views/collections/_show.js.erb
@@ -17,7 +17,7 @@ switch (view) {
         listHover();
         break;
     case 'covers':
-        underCover();
+        underCover(<%= shared %>);
         fitNameInNoCover();
         break;
     case 'panels':
@@ -30,11 +30,11 @@ switch (view) {
 }
 
 filter();
-showHideToolbar();
+showHideToolbar(<%= shared %>);
 modifyToolbar(view);
 toggleEditMenu();
 changeMyView(<%= shared %>);
-changeTheme();
+changeTheme(<%= shared %>);
 
 if (no_games) {
     disableSortLinks();
