--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,13 @@
 <% if logged_in? %>
   <script>
   <% if @home_id %>
-    var url = '/collections/<%= @home_id %>'
+    var url = '/collections/<%= @home_id %>';
   <% else %>
-    var url = '/search'
+    var url = '/search';
   <% end %>
   $.ajax({
       url: url
-  });
-  $(function() {
-      set_offc();
-  });
+  }).done(set_offc());
   </script>
 <% else %>
   <%= render 'not_logged' %>
