--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -254,6 +254,22 @@ div#search-results.mask2:after {
     a:hover {
         color: #666;
     }
+
+    p.link {
+        margin: 0px;
+        color: #888;
+        font-size: 16px;
+        font-style: italic;
+    }
+
+    p.no-border-top {
+        border-top: none;
+        margin: 0px;
+        padding-top: 5px;
+        svg {
+            vertical-align: text-bottom;
+        }
+    }
 }
 
 // SCREEN AS IMAGE
