--- a/app/views/layouts/shared.html.erb
+++ b/app/views/layouts/shared.html.erb
@@ -10,7 +10,13 @@
     <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0' %>
   </head>
   <body>
-    <%= render 'layouts/sh_menu' if guest_logged? %>
+    <% if guest_logged? %>
+      <% if shared_collections.empty? %>
+        <%= render 'shares/no_collections' %>
+      <% else %>
+        <%= render 'layouts/sh_menu' %>
+      <% end %>
+    <% end %>
     <div class="main-container">
       <%= render 'layouts/sh_navigation' %>
       <div class="uk-grid-match uk-grid-collpase" uk-grid>
