--- a/app/views/collections/_show.js.erb
+++ b/app/views/collections/_show.js.erb
@@ -35,6 +35,7 @@ modifyToolbar(view);
 toggleEditMenu();
 changeMyView(<%= shared %>);
 changeTheme(<%= shared %>);
+hideShowBackToTop();
 
 if (no_games) {
     disableSortLinks();
