--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -38,3 +38,4 @@
     <%= render partial: "my_games/#{ view }", locals: { collection: collection, shared: shared } %>
 </div>
 <%= render partial: 'layouts/toolbar', locals: { collection_id: collection.id, view: view, shared: shared } %>
+<%= render partial: 'shared/scroll_up' %>
