--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,9 @@
 <%= content_tag :div, title, id: 'logo', class: 'logo' %>
 <% if logged_in? %>
-  <%= link_to '', settings_path, id: 'social', class: 'nav-icon', 'uk-icon': 'social' %>
-  <%= link_to '', settings_path, id: 'settings', class: 'nav-icon', 'uk-icon': 'settings' %>
-  <%= link_to '', logout_path, id: 'logout', class: 'nav-icon', method: :delete, 'uk-icon': 'sign-out' %>
+  <%= link_to '', settings_path, id: 'social', class: 'nav-icon', 'uk-icon': 'social',
+  'uk-tooltip' => 'title: Share; pos: left' %>
+  <%= link_to '', settings_path, id: 'settings', class: 'nav-icon', 'uk-icon': 'settings',
+  'uk-tooltip' => 'title: Settings; pos: bottom-right' %>
+  <%= link_to '', logout_path, id: 'logout', class: 'nav-icon', method: :delete, 'uk-icon': 'sign-out',
+  'uk-tooltip' => 'title: Log Out; pos: bottom-right' %>
 <% end %>
