--- a/app/views/layouts/_toolbar.html.erb
+++ b/app/views/layouts/_toolbar.html.erb
@@ -3,25 +3,33 @@
 <ul>
   <li>
     <% graph_form_url = shared ? guest_graph_form_url(collection_id) : graph_form_url(collection_id) %>
-    <%= link_to svg('chart'), graph_form_url, id: 'chart', class: 'uk-icon', remote: true, 'uk-toggle': 'target: #f-modal' %>
+    <%= link_to svg('chart'), graph_form_url, id: 'chart', class: 'uk-icon', remote: true,
+     'uk-toggle': 'target: #f-modal', 'uk-tooltip' => 'title: Graphs; pos: left' %>
   </li>
   <li>
-    <%= content_tag :a, svg('dark'), id: 'change-theme', class: "uk-icon #{ current_theme == 'theme_dark' ? 'active' : '' }"  %>
+    <%= content_tag :a, svg('dark'), id: 'change-theme', class: "uk-icon #{ current_theme == 'theme_dark' ? 'active' : '' }",
+    'uk-tooltip' => 'title: Change Theme; pos: left'  %>
   </li>
   <hr>
-  <li><%= content_tag :a, nil, id: 'covers', class: "change-my-view", 'coll_id': collection_id, 'uk-icon': 'thumbnails' %></li>
-  <li><%= content_tag :a, nil, id: 'panels', class: "change-my-view", 'coll_id': collection_id, 'uk-icon': 'list' %></li>
-  <li><%= content_tag :a, nil, id: 'list', class: "change-my-view", 'coll_id': collection_id, 'uk-icon': 'table' %></li>
+  <li><%= content_tag :a, nil, id: 'covers', class: "change-my-view", 'coll_id': collection_id, 'uk-icon': 'thumbnails',
+  'uk-tooltip' => 'title: Covers; pos: left' %></li>
+  <li><%= content_tag :a, nil, id: 'panels', class: "change-my-view", 'coll_id': collection_id, 'uk-icon': 'list',
+  'uk-tooltip' => 'title: Panels; pos: left' %></li>
+  <li><%= content_tag :a, nil, id: 'list', class: "change-my-view", 'coll_id': collection_id, 'uk-icon': 'table',
+  'uk-tooltip' => 'title: List; pos: left' %></li>
   <%= content_tag :li do %>
   <% uc_change = 'active' unless ucs_closed?(shared) %>
-  <%= content_tag :a, nil, id: 'undercover', class: uc_change, 'uk-icon': 'info' %>
+  <%= content_tag :a, nil, id: 'undercover', class: uc_change, 'uk-icon': 'info',
+  'uk-tooltip' => 'title: Toggle Info; pos: left' %>
   <% end %>
   <%= content_tag :li do %>
-  <%= content_tag :a, nil, id: 'close-panels', 'uk-icon': 'shrink' %>
+  <%= content_tag :a, nil, id: 'close-panels', 'uk-icon': 'shrink',
+  'uk-tooltip' => 'title: Collapse Panels; pos: left' %>
   <% end %>
   <% unless shared %>
     <%= content_tag :li do %>
-    <%= content_tag :a, nil, id: 'g-show-edit', class: ('active' if edit_open?), 'uk-icon':'cog' %>
+    <%= content_tag :a, nil, id: 'g-show-edit', class: ('active' if edit_open?), 'uk-icon':'cog',
+    'uk-tooltip' => 'title: Toggle Options; pos: left' %>
     <% end %>
   <% end %>
   <hr>
