--- a/app/views/static_pages/search_page.js.erb
+++ b/app/views/static_pages/search_page.js.erb
@@ -6,6 +6,6 @@ changeSearchBar();
 activateSearchWait();
 clearNoResults();
 switchSearchBarTabs();
-manipulatePlatforms();
+checkAllNone('platforms-grid', 'p');
 activateSearchRecords();
 Cookies.set('last', 'search', { expires: 30 });
