Switch back to WeBrick from Puma. Finish share modal and forms (still needs styling).

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,7 @@ $disabled: #b4b4b4;
 @import "list";
 @import "s_list";
 @import "collections";
+@import "shares";
 @import "game_offc";
 
 // NAVIGATION
