--- a/app/views/shares/new.js.erb
+++ b/app/views/shares/new.js.erb
@@ -1,4 +1,4 @@
-$("#f-modal").find(".modal-content").html("<%= j(render 'form') %>");
+$("#f-modal").find(".modal-content").html("<%= j(render 'share_window') %>");
 $("#active-shares").html("<%= j(render 'active_shares') %>");
 checkAllNone('share-form', 'share');
 copyShareLinks();
