Fix problem with update action: it does not get collection name for updated share.

--- a/app/views/shares/_share_window.html.erb
+++ b/app/views/shares/_share_window.html.erb
@@ -1,4 +1,5 @@
-<h2>share form</h2>
+<p class="header">Shareable links <span uk-icon="icon: social; ratio: 1.5"></span></p>
+<p class="discription">Creating a shareable link allows you to share one or more collections with anyone (including people who don't have a Stillhavethem account) via a unique URL.</p>
+<div class="strike part"><span>Generate link:</span></div>
 <%= render partial: 'form' %>
-<hr>
 <div id="active-shares"></div>
