--- a/app/assets/stylesheets/shares.scss
+++ b/app/assets/stylesheets/shares.scss
@@ -2,8 +2,9 @@ div.share {
     border: thin solid #bababa;
     border-radius: 5px;
 }
+
 #share-form {
-    position:relative;
+    position: relative;
 }
 
 #share-form.disabled::before {
@@ -12,4 +13,23 @@ div.share {
     width: 100%;
     height: 100%;
     background: #ecececb5;
+}
+
+#f-modal p.header {
+    font-size: 20px;
+    color: #333;
+
+    span {
+        color: #666;
+        vertical-align: text-bottom;
+    }
+}
+
+p.discription {
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.part span {
+    font-size: 16px;
 }
