--- a/app/views/shares/_form.html.erb
+++ b/app/views/shares/_form.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <%= form_with model: @share, id: form_id do |f| %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, class: 'uk-input login-input' %>
   <%= f.text_area :message %>
 
   <%= f.collection_check_boxes :shared, current_user.collections, :id, :name do |c| %>
