--- a/app/views/shares/_form.html.erb
+++ b/app/views/shares/_form.html.erb
@@ -10,19 +10,40 @@
   <% check_btn_prefix = "ed-share-#{ @share.id }" %>
 <% end %>
 
-<%= form_with model: @share, id: form_id do |f| %>
-  <%= f.text_field :title, class: 'uk-input login-input' %>
-  <%= f.text_area :message %>
-
-  <%= f.collection_check_boxes :shared, current_user.collections, :id, :name do |c| %>
-    <% id = id_prefix + c.object.id.to_s %>
-    <% c.label(for: id, class: "form-check-label") { c.check_box(id: id, class: "form-check-input", type: "checkbox") + c.text } %>
-  <% end %>
-
-  <%= content_tag :a, 'none', id: check_btn_prefix + '-none' %>
-  <%= content_tag :a, 'all', id: check_btn_prefix + '-all' %>
-
-  <%= f.submit submit_text, class: "uk-button uk-button-default" %>
-  <%= f.submit('Reset', class: "uk-button uk-button-default", type: "reset" ) %>
-  <%= content_tag :a, 'Cancel', id: "sh-ud-cancel-#{ @share.id }" unless new %>
+<%= form_with model: @share, id: form_id, class: 'sh_form' do |f| %>
+  <div class="uk-child-width-1-2 uk-grid-small uk-grid">
+    <div>
+      <div class="uk-position-relative uk-margin-small">
+        <%= f.text_field :title, class: 'uk-input share-input',
+         placeholder: 'Title of shared page',
+         autocomplete: 'off' %>
+         <span class="sh-input-icon" uk-icon="heart"></span>
+         <div class="sh-label-info">optional, max 50 characters</div>
+      </div>
+      <div class="uk-position-relative uk-margin-small">
+        <%= f.text_area :message, class: 'uk-input share-input',
+         placeholder: 'Leave a message',
+         autocomplete: 'off' %>
+         <span class="sh-input-icon" uk-icon="comment"></span>
+         <div class="sh-label-info">optional, max 300 characters</div>
+      </div>
+    </div>
+    <div>
+      <div class="uk-position-relative sh-check-container">
+        <span class="sh-check-title"><span uk-icon="tag"></span>Collections to share</span>
+        <div class="sh-coll-select uk-grid-small uk-child-width-auto uk-grid">
+          <%= f.collection_check_boxes :shared, current_user.collections, :id, :name do |c| %>
+            <% id = id_prefix + c.object.id.to_s %>
+            <% c.label(for: id, class: "sh-form-check-label") { c.check_box(id: id, class: "uk-checkbox sh-check", type: "checkbox") + ' ' + c.text } %>
+          <% end %>
+        </div>
+      </div>
+      <div class="sh-none-all"><%= content_tag :a, 'none', id: check_btn_prefix + '-none' %><%= content_tag :a, 'all', id: check_btn_prefix + '-all' %></div>
+    </div>
+  </div>
+  <div class="sh-form-buttons">
+    <%= f.submit submit_text, class: "uk-button sh-button" %>
+    <%= f.submit('Reset', class: "sh-small-button", type: "reset" ) %>
+    <%= content_tag :a, 'Cancel', id: "sh-ud-cancel-#{ @share.id }", class: 'sh-small-button' unless new %>
+  </div>
 <% end %>
